# anon-compliance

./: .gitignore  .vercelignore  Cargo.toml  README.md  package-lock.json  package.json  server.js  vercel.json
api/: _stellar.js  build-action-xdr.js  build-attestation-xdr.js  build-proof-xdr.js  config.js  status.js  submit-signed.js  submit.js  zk-artifacts.js
contracts/anon-compliance/: Cargo.toml
contracts/anon-compliance/src/: lib.rs  test.rs
contracts/anon-compliance/test_snapshots/test/: accepts_valid_demo_proof_and_blocks_replay.1.json  executes_regulated_action_once_after_attestation.1.json  rejects_action_without_attestation.1.json  rejects_invalid_demo_proof.1.json
frontend/: app.js  index.html  styles.css
work/zk-export/: Cargo.toml
work/zk-export/src/: main.rs
zk/: compliance-circuit-spec.md
