[workspace]
resolver = "2"
members = ["contracts/anon-compliance"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/example/anon-compliance"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

